--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    
 }
 
 .home_image {
@@ -45,7 +46,7 @@ header {
     border-radius: 50%;
     position: relative;
     transition: all 0.3s ease;
-    border: #000 0.1rem solid;
+    
     box-shadow: #000 0 0 1rem;
 }
 
@@ -88,15 +89,21 @@ span {
 }
 
 .home-content h1 {
+    background-color:#f1f1ebe5;
     font-size: 3.6rem;
     font-weight: 700;
     line-height: 1.3;
+    border-radius: 30px;
+    
+    box-shadow: #000 0 0 1rem;
+    margin: 10px;
 }
 
 .home-content p {
     font-size: 1.6rem;
     margin-top: 1rem;
     color: #000;
+    
 }
 
 .socials a{
@@ -109,7 +116,7 @@ span {
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
-    border: 2px solid gold;
+    border: 1px solid gold;
     box-shadow: #000 0 0 1rem;
     
 
