--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
     overflow-x: hidden;
-    width: 100%;
+    width: 100vw;
     height: 100%; 
     background-color:aliceblue;  
     text-align: center;
@@ -21,9 +21,10 @@ body {
 
 header {
     position: fixed;
+    height: auto;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     padding: 1rem 9%;
     background: #ffffffdb;
     display: flex;
@@ -35,14 +36,13 @@ header {
 }
 
 .home_image {
-    padding-top: 50px
+    padding-top: 10vw;
 }
 
 .image {
-    margin-top: 100px;
-    margin-left: 20px;
-    width: 500px;
-    height: 600px;
+    margin-top: 7vw;
+    width: 35vw;
+    height: 42vw;
     border-radius: 50%;
     position: relative;
     transition: all 0.3s ease;
@@ -51,6 +51,7 @@ header {
 }
 
 .logo {
+    height: 5vw;
     font-size: 2.5rem;
     color: #000;
     font-weight: 600;
@@ -62,6 +63,7 @@ nav a:hover,
 nav a.active {
     color:crimson;
     border-bottom: crimson 2px solid;
+    transform: translateY(0.1rem);
 }
 
 nav a {
@@ -93,7 +95,7 @@ span {
     font-size: 3.6rem;
     font-weight: 700;
     line-height: 1.3;
-    border-radius: 30px;
+    border-radius: 10px;
     
     box-shadow: #000 0 0 1rem;
     padding-top: 10px;
@@ -129,6 +131,11 @@ span {
     box-shadow: 0 0 1rem gold;
 }
 
+.socials a:active {
+    transform: scale(0.9);
+    transform: translateY(0.1rem);
+}
+
 .intro {
     margin-top: 150px;
     margin-left: 20px;
@@ -138,4 +145,59 @@ span {
     padding: 20px;
     width: 720px;
     box-shadow: #000 0 0 1rem;
+}
+
+@media (max-width: 768px) {
+  .home {
+    flex-direction: column;
+    padding: 0 5%;
+  }
+
+  .home-content {
+    gap: 10px;
+  }
+
+  .home-content h1 {
+    font-size: 2.4rem;
+  }
+
+  .home-content p {
+    font-size: 1.2rem;
+  }
+
+  .socials a {
+    margin: 5px;
+    font-size: 15pt;
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .intro {
+    margin-top: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  .home-content h1 {
+    font-size: 1.8rem;
+  }
+
+  .home-content p {
+    font-size: 1rem;
+  }
+
+  .socials a {
+    margin: 2px;
+    font-size: 10pt;
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .intro {
+    margin-top: 50px;
+    width: 95%;
+  }
 }
