--- a/Styles/project_styles.css
+++ b/Styles/project_styles.css
@@ -2,7 +2,7 @@
     padding-top : 100px;
     font-size: 2rem;
     font-weight: 600;
-    color: #333;
+    color: black;
     text-align: center;
     margin: 20px 0;
 }
@@ -15,8 +15,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
-
-
+    
 }
 
 .projects :hover{
@@ -27,6 +26,7 @@
 .project{
     overflow-y: hidden;
     border-radius: 10px;
-    background-color: white;
+    background-color: #f1f1ebe5;
+    padding: 5px;
     box-shadow: #000 0 0 5px; 
 }
