--- a/Styles/Popup.css
+++ b/Styles/Popup.css
@@ -11,6 +11,22 @@ dialog{
     z-index: 1000;
 }
 
+button {
+    background-color: #f1f1ebe5;
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: gray;
+    color: white;
+    cursor: pointer;
+}
+
 
 @keyframes fadeIn {
     from {
@@ -21,12 +37,12 @@ dialog{
     }
 }
 
-@keyframes fadeOut {
+@keyframes grow {
     from {
-        opacity: 1;
+        transform: scale(0.3);
     }
     to {
-        opacity: 0;
+        transform: scale(1);
     }
 }
 
