Refactor popup styles for improved aesthetics and update project titles for clarity

--- a/Styles/Popup.css
+++ b/Styles/Popup.css
@@ -1,18 +1,20 @@
 dialog{
+    border: none;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    box-shadow:black 0 0 3px;
     animation: fadeIn 0.3s ease-in-out;
     z-index: 1000;
+    background-color: rgba(255, 255, 255, 0.072);
+    backdrop-filter: blur(5px);
 }
 
 button {
-    background-color: #f1f1ebe5;
+    background-color: rgba(255, 255, 255, 0.243);
     color: black;
     border: none;
     padding: 10px 20px;
@@ -46,6 +48,3 @@ button:hover {
     }
 }
 
-.close{
-    cursor: pointer;
-}
