--- a/Styles/project_styles.css
+++ b/Styles/project_styles.css
@@ -23,10 +23,17 @@
     cursor: pointer;
 }
 
-.project{
+.project {
     overflow-y: hidden;
     border-radius: 10px;
-    background-color: #f1f1ebe5;
+    background-color: rgba(255, 255, 255, 0.805);
     padding: 5px;
     box-shadow: #000 0 0 5px; 
+}
+
+.project h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: black;
+    text-align: center;
 }
